@@ -29,11 +29,13 @@ subtest 'methods' => sub {
         auth     => 'WebService::Slack::WebApi::Auth',
         channels => 'WebService::Slack::WebApi::Channels',
         chat     => 'WebService::Slack::WebApi::Chat',
+        dialog   => 'WebService::Slack::WebApi::Dialog',
         emoji    => 'WebService::Slack::WebApi::Emoji',
         files    => 'WebService::Slack::WebApi::Files',
         groups   => 'WebService::Slack::WebApi::Groups',
         im       => 'WebService::Slack::WebApi::Im',
         oauth    => 'WebService::Slack::WebApi::Oauth',
+        pins     => 'WebService::Slack::WebApi::Pins',
         rtm      => 'WebService::Slack::WebApi::Rtm',
         search   => 'WebService::Slack::WebApi::Search',
         stars    => 'WebService::Slack::WebApi::Stars',
