@@ -1,6 +1,7 @@
 Revision history for Perl extension WebService-Slack-WebApi
 
 {{$NEXT}}
+    - add the dialog.open method (thx zostay)
 
 0.11 2017-11-05T13:00:39Z
     - fix test (thx ivanwills)
